Adicionado banco de dados e Model do Usuário, além de adicionar a autenticação nas outras Routes
